Update local mode
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@134530 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/local/directive/devices/camera.html
+++ b/local/directive/devices/camera.html
@@ -1,5 +1,5 @@
 <div class="camera-wrap">
-  <img ng-if="thumbnailImg" ng-src={{thumbnailImg}} class="camera-cached-tumb" ng-click="requestLiveStream(cinfo.id)">
+  <img ng-if="thumbnailImg" ng-src={{thumbnailImg}} class="camera-cached-tumb" ng-click="requestLiveStream(cinfo)">
   <h5 ng-if="!thumbnailImg">Camera not available</h5>
   <button ng-if="!thumbnailImg" type="button" class="button camera-refresh-btn" ng-click="refreshFeed(cinfo)">
     Refresh feed
