--- a/local/html_route/frame_template.html
+++ b/local/html_route/frame_template.html
@@ -78,13 +78,13 @@
                   Pi - NOOB Installer
                 </a>
                 <a href="https://nhome.s3.amazonaws.com/NHomePi.img.xz" class="download-link">
-                    Pi - Raw Image
+                  Pi - Raw Image
                 </a>
                 <a href="https://nhome.s3.amazonaws.com/NHomePi2-NOOBS.zip" class="download-link">
-                      Pi 2 - NOOB Installer
+                  Pi 2 - NOOB Installer
                 </a>
                 <a href="https://nhome.s3.amazonaws.com/NHomePi2.img.xz" class="download-link">
-                        Pi 2 - NOOB Installer
+                  Pi 2 - Raw Installer
                 </a>
               </div>
             </div>
