--- a/local/directive/devices/schedule.html
+++ b/local/directive/devices/schedule.html
@@ -39,12 +39,14 @@
       <ul class="dropdown-menu edit-schedule-dropdown" role="menu" aria-labelledby="edit-schedule-btn">
         <li role="presentation" class="edit-schedule-dropdown-btn" ng-hide="isNumber(schinfo.dateTime)">
           <a role="menuitem" tabindex="-1" href="" data-toggle="collapse" data-target="#edit-schedule-menu-{{schinfo.id}}">
-        Edit
+            Edit
+            <i class="material-icons">edit</i>
           </a>
         </li>
         <li role="presentation" class="delete-schedule-dropdown-btn">
           <a role="menuitem" tabindex="-1" href="" ng-click="deleteSchedule(schinfo.id)">
-        Delete
+            Delete
+            <i class="material-icons">delete</i>
           </a>
         </li>
       </ul>
@@ -93,11 +95,11 @@
       </div>
       <div class="col-xs-12 col-sm-4 col-md-2 schedule-group">
         <span>
-          <input type="checkbox" id="edit-schedule-sunset-{{schinfo.id}}" value="sunset" name="sunset" ng-checked="schinfo.dateTime === 'sunset'" ng-click="disableInputs($event)">
+          <input type="checkbox" id="edit-schedule-sunset-{{schinfo.id}}" class="sunset" value="sunset" name="sunset" ng-checked="schinfo.dateTime === 'sunset'" ng-click="disableInputs($event)">
           <label for="edit-schedule-sunset-{{schinfo.id}}" class="schedule-label schedule-sunset-label">Sunset</label>
         </span>
         <span>
-          <input type="checkbox" id="edit-schedule-sunrise-{{schinfo.id}}" value="sunrise" name="sunrise" ng-checked="schinfo.dateTime === 'sunrise'" ng-click="disableInputs($event)">
+          <input type="checkbox" id="edit-schedule-sunrise-{{schinfo.id}}" class="sunrise" value="sunrise" name="sunrise" ng-checked="schinfo.dateTime === 'sunrise'" ng-click="disableInputs($event)">
           <label for="edit-schedule-sunrise-{{schinfo.id}}" class="schedule-label schedule-sunrise-label">Sunrise</label>
         </span>
       </div>
