--- a/local/html_route/favorites_template.html
+++ b/local/html_route/favorites_template.html
@@ -1,19 +1,20 @@
 <div class="template-nav">
-    <h3>Favorites</h3>
+  <h3>Favorites</h3>
 </div>
-<div class="display-devices-row">
-  <light ng-repeat="light in favorites.allDev.light | filter: {favorites: true}" linfo="light"></light>
-    <switch ng-repeat="switch in favorites.allDev.switch | filter: {favorites: true}" sinfo="switch"></switch>
-    <thermostat ng-repeat="thermostat in favorites.allDev.thermostat | filter: {favorites: true}" tinfo="thermostat"></thermostat>
-    <shutter ng-repeat="shutter in favorites.allDev.shutter | filter: {favorites: true}" shinfo="shutter"></shutter>
-    <camera ng-repeat="camera in favorites.allDev.camera | filter: {favorites: true}" cinfo="camera"></camera>
-  <remote ng-repeat="tv in favorites.allRemotes.tv | filter: {favorites: true}" tvinfo="tv"></remote>
+<div class="display-devices-row" id="favorites-wrap">
+  <small class="color-transparent hidden">You don't have any favorite devices. Try clicking on star icon to add them</small>
+  <light ng-repeat="light in favorites.data.getDevicesObj.light | filter: {favorites: true}" linfo="light"></light>
+  <switch ng-repeat="switch in favorites.data.getDevicesObj.switch | filter: {favorites: true}" sinfo="switch"></switch>
+  <thermostat ng-repeat="thermostat in favorites.data.getDevicesObj.thermostat | filter: {favorites: true}" tinfo="thermostat"></thermostat>
+  <shutter ng-repeat="shutter in favorites.data.getDevicesObj.shutter | filter: {favorites: true}" shinfo="shutter"></shutter>
+  <camera ng-repeat="camera in favorites.data.getDevicesObj.camera | filter: {favorites: true}" cinfo="camera"></camera>
+  <remote ng-repeat="tv in favorites.data.getDevicesObj.remote | filter: {favorites: true}" tvinfo="tv"></remote>
 </div>
 
 <section class="custom-modal-window cam-live-stream-modal">
   <section class="custom-modal-wrap">
     <img src="img/button/cross.png" class="close-live-stream-modal" ng-click="favorites.stopLiveStream()">
     <img ng-src={{favorites.liveImage}} class="camera-live-stream">
-    <button type="button" ng-click="favorites.fullScreen()" class="button full-screen-btn"></button>
+    <i class="material-icons button full-screen-btn" ng-click="favorites.fullScreen()" title="full screen">fullscreen</i>
   </section>
 </section>
